--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
       <div class="container">
         <div class="d-flex align-items-center justify-content-between">
+          <div class="logo1">
+            <img src="images/7.jpeg" style="height: 60px;">
+          </div>
           <div class="logo">
             <div class="site-logo">
               <a href="index.html" class="js-logo-clone">NovionPharma</a>
@@ -68,7 +71,7 @@
                     
                   </ul>
                 </li>
-                <li><a href="about.html">Certificates/Licenses</a></li>
+                <li><a href="certificate.html">Certificates/Licenses</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -93,7 +96,7 @@
           <div class="col-lg-7 mx-auto order-lg-2 align-self-center">
             <div class="site-block-cover-content text-center">
               <h2 class="sub-title">Effective Medicine, New Medicine Everyday</h2>
-              <h1>Welcome To NovionPharma</h1>
+              <h1>Welcome To NovionPharma (نوفون فارما)</h1>
               <!-- <p>
                 <a href="#" class="btn btn-primary px-5 py-3">Shop Now</a>
               </p> -->
