--- a/shop.html
+++ b/shop.html
@@ -40,6 +40,9 @@
 
       <div class="container">
         <div class="d-flex align-items-center justify-content-between">
+          <div class="logo1">
+            <img src="images/7.jpeg" style="height: 60px;">
+          </div>
           <div class="logo">
             <div class="site-logo">
               <a href="index.html" class="js-logo-clone">NovionPharma</a>
