--- a/cart.html
+++ b/cart.html
@@ -68,7 +68,7 @@
                     
                   </ul>
                 </li>
-                <li><a href="about.html">Certificates/Licenses</a></li>
+                <li><a href="certificate.html">Certificates/Licenses</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
