--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
             <div class="site-logo">
               <a href="index.html" class="js-logo-clone">NovionPharma</a>
             </div>
+            <div class="site-logo">
+              <a href="index.html" class="js-logo-clone">نوفون فارما</a>
+            </div>
           </div>
           <div class="main-nav d-none d-lg-block">
             <nav class="site-navigation text-right text-md-center" role="navigation">
@@ -56,7 +59,7 @@
                 <li class="has-children">
                   <a href="#">Products</a>
                   <ul class="dropdown">
-                    <li><a href="shop.html">Pharmaceutical</a></li>
+                    <li><a href="shop.html">ONCOLOGY</a></li>
                     <li class="has-children">
                       <!-- <a href="#">Pharmaceutical</a>
                       <ul class="dropdown">
@@ -66,8 +69,18 @@
                         <li><a href="#">Tea &amp; Coffee</a></li>
                       </ul> -->
                     </li>
-                    <li><a href="shop.html">Nutraceutical</a></li>
-                    <li><a href="shop.html">Ayurvedic</a></li>
+                    <li><a href="shop.html">ANTI-INFECTIVES</a></li>
+                    <li><a href="shop.html">GASTROINTETINALS</a></li>
+                    <li><a href="shop.html">RESPIRATORY & ANTIHISTAMINES</a></li>
+                    <li><a href="shop.html">ORTHOPEDICS & ANALGESICS</a></li>
+                    <li><a href="shop.html">CARDIOVASCULAR & ANTIDIABETICS</a></li>
+                    <li><a href="shop.html">GYNAECOLOGY</a></li>
+                    <li><a href="shop.html">UROLOGY & NEPHROLOGY</a></li>
+                    <li><a href="shop.html">NEURO-PSYCHIATRIC</a></li>
+                    <li><a href="shop.html">OPHTHALMOLOGY</a></li>
+                    <li><a href="shop.html">DERMATOLOGY & SKIN CARE</a></li>
+                    <li><a href="shop.html">STEROIDS</a></li>
+                    <li><a href="shop.html">NUTRA & SUPPLEMENTS</a></li>
                     
                   </ul>
                 </li>
@@ -304,9 +317,9 @@
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Contact Info</h3>
               <ul class="list-unstyled">
-                <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-                <li class="email">emailaddress@domain.com</li>
+                <li class="address">uttar ujala ward no.28 near namra masjid flat no.02 haldwani nainital (263139) Uttarakhand</li>
+                <li class="phone"><a href="tel://23923929210">8954353685</a></li>
+                <li class="email">pharmanovion@gmail.com</li>
               </ul>
             </div>
 
@@ -318,7 +331,7 @@
             <p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
+              <script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made
               with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://kodingcircle.in" target="_blank"
                 class="text-primary">KodingCircle</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
