modification2 as per customer

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 <li class="has-children">
                   <a href="#">Products</a>
                   <ul class="dropdown">
-                    <li><a href="shop.html">ONCOLOGY</a></li>
+                    <li><a href="oncology.html">ONCOLOGY</a></li>
                     <li class="has-children">
                       <!-- <a href="#">Pharmaceutical</a>
                       <ul class="dropdown">
@@ -69,18 +69,19 @@
                         <li><a href="#">Tea &amp; Coffee</a></li>
                       </ul> -->
                     </li>
-                    <li><a href="shop.html">ANTI-INFECTIVES</a></li>
-                    <li><a href="shop.html">GASTROINTETINALS</a></li>
-                    <li><a href="shop.html">RESPIRATORY & ANTIHISTAMINES</a></li>
-                    <li><a href="shop.html">ORTHOPEDICS & ANALGESICS</a></li>
-                    <li><a href="shop.html">CARDIOVASCULAR & ANTIDIABETICS</a></li>
-                    <li><a href="shop.html">GYNAECOLOGY</a></li>
-                    <li><a href="shop.html">UROLOGY & NEPHROLOGY</a></li>
-                    <li><a href="shop.html">NEURO-PSYCHIATRIC</a></li>
-                    <li><a href="shop.html">OPHTHALMOLOGY</a></li>
-                    <li><a href="shop.html">DERMATOLOGY & SKIN CARE</a></li>
-                    <li><a href="shop.html">STEROIDS</a></li>
-                    <li><a href="shop.html">NUTRA & SUPPLEMENTS</a></li>
+                    <li><a href="anti-infectives.html">ANTI-INFECTIVES</a></li>
+                    <li><a href="gastro.html">GASTROINTETINALS</a></li>
+                    <li><a href="respo.html">RESPIRATORY & ANTIHISTAMINES</a></li>
+                    <li><a href="ortho.html">ORTHOPEDICS & ANALGESICS</a></li>
+                    <li><a href="cardio.html">CARDIOVASCULAR & ANTIDIABETICS</a></li>
+                    <li><a href="gyno.html">GYNAECOLOGY</a></li>
+                    <li><a href="uro.html">UROLOGY & NEPHROLOGY</a></li>
+                    <li><a href="therapy.html">NEURO-PSYCHIATRIC</a></li>
+                    <li><a href="opth.html">OPHTHALMOLOGY</a></li>
+                    <li><a href="derma.html">DERMATOLOGY & SKIN CARE</a></li>
+                    <li><a href="steroid.html">STEROIDS</a></li>
+                    <li><a href="nutra.html">NUTRA & SUPPLEMENTS</a></li>
+                    
                   </ul>
                 </li>
                 <li><a href="certificate.html">Certificates/Licenses</a></li>
