--- a/anti-infectives.html
+++ b/anti-infectives.html
@@ -127,13 +127,13 @@
             <div class="row">
               <div class="col-md-12 mb-0">
                 <a href="index.html">Home</a> <span class="mx-2 mb-0">/</span>
-                <strong class="text-black">Certificates/Licenses</strong>
+                <strong class="text-black">PRODUCTS / ANTI-INFECTIVES</strong>
               </div>
             </div>
           </div>
         </div>
     
-        <h2>Anti infective</h2>
+        <h2>ANTI-INFECTIVES</h2>
 
     <table>
         <thead>
