--- a/certificate.html
+++ b/certificate.html
@@ -56,7 +56,7 @@
                 <nav class="site-navigation text-right text-md-center" role="navigation">
                   <ul class="site-menu js-clone-nav d-none d-lg-block">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">What We Do</a></li>
+                    <!-- <li><a href="shop.html">What We Do</a></li> -->
                     <li class="has-children">
                       <a href="#">Products</a>
                       <ul class="dropdown">
