modification5 as per customer

--- a/anti-infectives.html
+++ b/anti-infectives.html
@@ -73,7 +73,7 @@
                 <nav class="site-navigation text-right text-md-center" role="navigation">
                   <ul class="site-menu js-clone-nav d-none d-lg-block">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">What We Do</a></li>
+                    <!-- <li><a href="shop.html">What We Do</a></li> -->
                     <li class="has-children">
                       <a href="#">Products</a>
                       <ul class="dropdown">
@@ -399,8 +399,7 @@
     
                 <div class="block-7">
                   <h3 class="footer-heading mb-4">About Us</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
-                    sed dolorum excepturi iure eaque, aut unde.</p>
+                  <p> As we continue to grow, we remain grounded in the core values of scientific integrity, collaboration, and patient-centered care.</p>
                 </div>
     
               </div>
