--- a/certificate.html
+++ b/certificate.html
@@ -132,9 +132,9 @@
                       <img src="images/Capture13.PNG" alt="Image 2" onclick="openPopup(this)">
                     </div>
                     <div class="gallery-item">
-                      <img src="images/Capture12.PNG" alt="Image 3" onclick="openPopup(this)">
+                      <img src="images/Capture14.PNG" alt="Image 3" onclick="openPopup(this)">
                     </div>
-                    <div class="gallery-item">
+                    <!-- <div class="gallery-item">
                       <img src="images/Capture12.PNG" alt="Image 4" onclick="openPopup(this)">
                     </div>
                     <div class="gallery-item">
@@ -142,7 +142,7 @@
                     </div>
                     <div class="gallery-item">
                       <img src="images/Capture12.PNG" alt="Image 6" onclick="openPopup(this)">
-                    </div>
+                    </div> -->
                   </div>
 
                   <div id="popup" class="popup">
@@ -165,8 +165,7 @@
     
                 <div class="block-7">
                   <h3 class="footer-heading mb-4">About Us</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
-                    sed dolorum excepturi iure eaque, aut unde.</p>
+                  <p> As we continue to grow, we remain grounded in the core values of scientific integrity, collaboration, and patient-centered care.</p>
                 </div>
     
               </div>
