--- a/uro.html
+++ b/uro.html
@@ -342,8 +342,7 @@
     
                 <div class="block-7">
                   <h3 class="footer-heading mb-4">About Us</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
-                    sed dolorum excepturi iure eaque, aut unde.</p>
+                  <p> As we continue to grow, we remain grounded in the core values of scientific integrity, collaboration, and patient-centered care.</p>
                 </div>
     
               </div>
