--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
 
 
 
-    <div class="site-section bg-primary">
+    <!-- <div class="site-section bg-primary">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -196,7 +196,7 @@
         </div>
       </div>
       
-    </div>
+    </div> -->
 
 
     <footer class="site-footer">
@@ -206,8 +206,7 @@
 
             <div class="block-7">
               <h3 class="footer-heading mb-4">About Us</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
-                sed dolorum excepturi iure eaque, aut unde.</p>
+              <p> As we continue to grow, we remain grounded in the core values of scientific integrity, collaboration, and patient-centered care.</p>
             </div>
 
           </div>
