modification6 as per customer

--- a/anti-infectives.html
+++ b/anti-infectives.html
@@ -133,7 +133,7 @@
           </div>
         </div>
     
-        <h2>ANTI-INFECTIVES</h2>
+        <h2 style="text-align: center;"><b>ANTI-INFECTIVES</b></h2>
 
     <table>
         <thead>
