--- a/gastro.html
+++ b/gastro.html
@@ -133,7 +133,7 @@
           </div>
         </div>
     
-        <h2>GASTROINTETINALS</h2>
+        <h2 style="text-align: center;"><b>GASTROINTETINALS</b></h2>
 
         <table>
             <thead>
