--- a/ortho.html
+++ b/ortho.html
@@ -133,7 +133,7 @@
           </div>
         </div>
     
-        <h2>ORTHOPEDICS & ANALGESICS</h2>
+        <h2 style="text-align: center;"><b>ORTHOPEDICS & ANALGESICS</b></h2>
 
         <table>
             <thead>
