--- a/steroid.html
+++ b/steroid.html
@@ -135,7 +135,7 @@
           </div>
         </div>
     
-        <h2>STEROIDS</h2>
+        <h2 style="text-align: center;"><b>STEROIDS</b></h2>
 
         <table class="responsive-table">
             <thead>
