--- a/therapy.html
+++ b/therapy.html
@@ -134,7 +134,7 @@
           </div>
         </div>
     
-        <h2>NEURO-PSYCHIATRIC</h2>
+        <h2 style="text-align: center;"><b>NEURO-PSYCHIATRIC</b></h2>
 
 
   <table class="responsive-table">
