--- a/uro.html
+++ b/uro.html
@@ -135,7 +135,7 @@
           </div>
         </div>
     
-        <h2>UROLOGY & NEPHROLOGY</h2>
+        <h2 style="text-align: center;"><b>UROLOGY & NEPHROLOGY</b></h2>
 
         <table class="responsive-table">
           <thead>
