--- a/cardio.html
+++ b/cardio.html
@@ -133,7 +133,7 @@
           </div>
         </div>
     
-        <h2>CARDIOVASCULAR & ANTIDIABETICS</h2>
+        <h2 style="text-align: center;"><b>CARDIOVASCULAR & ANTIDIABETICS</b></h2>
 
         <table>
             <thead>
