--- a/derma.html
+++ b/derma.html
@@ -135,7 +135,7 @@
           </div>
         </div>
     
-        <h2>DERMATOLOGY</h2>
+        <h2 style="text-align: center;"><b>DERMATOLOGY</b></h2>
 
         <table class="responsive-table">
             <thead>
