--- a/gyno.html
+++ b/gyno.html
@@ -133,7 +133,7 @@
         </div>
         
     
-        <h2>GYNAECOLOGY</h2>
+        <h2 style="text-align: center;"><b>GYNAECOLOGY</b></h2>
 
         <table>
             <thead>
