--- a/nutra.html
+++ b/nutra.html
@@ -135,7 +135,7 @@
           </div>
         </div>
     
-        <h2>NUTRA & SUPPLEMENTS</h2>
+        <h2 style="text-align: center;"><b>NUTRA & SUPPLEMENTS</b></h2>
 
         <table class="responsive-table">
             <thead>
