--- a/opth.html
+++ b/opth.html
@@ -135,7 +135,7 @@
           </div>
         </div>
     
-        <h2>OPHTHALMOLOGY</h2>
+        <h2 style="text-align: center;"><b>OPHTHALMOLOGY</b></h2>
 
         <table class="responsive-table">
             <thead>
