--- a/respo.html
+++ b/respo.html
@@ -133,7 +133,7 @@
           </div>
         </div>
     
-        <h2>RESPIRATORY & ANTIHISTAMINES</h2>
+        <h2 style="text-align: center;"><b>RESPIRATORY & ANTIHISTAMINES</b></h2>
 
         <table>
             <thead>
