--- a/opth.html
+++ b/opth.html
@@ -23,10 +23,10 @@
 
   <link rel="stylesheet" href="css/styles.css">
   <style>
-   
-   table {
-        border-collapse: collapse;
-        width: 100%;
+    table {
+      border-collapse: collapse;
+      width: 95%;
+      margin-left: 2.5%;
     }
 
     th,
@@ -135,14 +135,30 @@
           </div>
         </div>
     
-        <h2 style="text-align: center;"><b>OPHTHALMOLOGY</b></h2>
+        <h2 style="text-align: center;">OPHTHALMOLOGY</h2>
 
-        <table class="responsive-table">
+        <label for="rowSelector" style="text-align: center;margin-left: 2.5%;">Show
+          <select id="rowSelector" class="tableRows" onchange="updateTableRows('OPTH', this.value)">
+            <option value="select">select</option>
+            <option value="10">10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+            <option value="all">All</option>
+          </select>
+          entries
+        </label>
+
+        <label class="searchBox" for="searchBox">Search Product:
+          <input type="text" id="searchBox" placeholder="Type Here..." oninput="searchTable('OPTH', this.value)">
+      </label>
+
+        <table id="OPTH" class="responsive-table">
             <thead>
               <tr>
                 <th>S.No.</th>
-                <th>COMPOSITION</th>
-                <th>DOSAGE</th>
+                <th style="cursor: pointer;" onclick="sortTable(1, 'OPTH')">COMPOSITION</th>
+                    <th style="cursor: pointer;" onclick="sortTable(2, 'OPTH')">DOSAGE</th>
                 <th>PACK</th>
               </tr>
             </thead>
