underline and logo fix
underline issue fix from all pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="site-logo">
               <a href="index.html" class="js-logo-clone">NovionPharma</a>
             </div>
-            <div class="site-logo">
+            <div class="site-logo" style="text-align: center;">
               <a href="index.html" class="js-logo-clone">نوفون فارما</a>
             </div>
           </div>
