--- a/steroid.html
+++ b/steroid.html
@@ -68,14 +68,14 @@
                 <div class="site-logo">
                   <a href="index.html" class="js-logo-clone">NovionPharma</a>
                 </div>
-                <div class="site-logo">
+                <div class="site-logo" style="text-align: center;">
                   <a href="index.html" class="js-logo-clone">نوفون فارما</a>
                 </div>
               </div>
               <div class="main-nav d-none d-lg-block">
                 <nav class="site-navigation text-right text-md-center" role="navigation">
                   <ul class="site-menu js-clone-nav d-none d-lg-block">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <!-- <li><a href="shop.html">What We Do</a></li> -->
                     <li class="has-children">
                       <a href="#">Products</a>
