--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
               <a href="#" class="h-100">
                 <h5>Free <br> Shipping</h5>
                 <p>
-                  Amet sit amet dolor
-                  <strong>Lorem, ipsum dolor sit amet consectetur adipisicing.</strong>
+                  free shipping on every order—no minimum required.
+                  <strong>! Whether you're ordering one item or filling up your cart, your shipping cost is on us..</strong>
                 </p>
               </a>
             </div>
