--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
               <a href="#" class="h-100">
                 <h5>Season <br> Sale 50% Off</h5>
                 <p>
-                  Amet sit amet dolor
-                  <strong>Lorem, ipsum dolor sit amet consectetur adipisicing.</strong>
+                  Seasonal Sale: Up to 50% Off!
+                  <strong> Not sure what to get? A gift card is the perfect solution!  </strong>
                 </p>
               </a>
             </div>
@@ -150,7 +150,7 @@
               <a href="#" class="h-100">
                 <h5>Buy <br> A Gift Card</h5>
                 <p>
-                  Amet sit amet dolor
+                   Give the Gift of Choice with a Gift Card!
                   <strong>Lorem, ipsum dolor sit amet consectetur adipisicing.</strong>
                 </p>
               </a>
